5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1811_2563.log
== TEST (2019-06-06 19:02:25) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
while size(vet) > 1:
	for elemento in vet:
		if sum(vet)/size(vet) >= 5:
			ap += 1
	print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:16:02) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
while size(vet) > 1:
	for elemento in vet:
		if sum(vet)/size(vet) >= 5:
			ap += 1
		if ap >= 7:
			
	print(ap)
-- ERROR:
File "XXXX", line 10
    print(ap)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:16:12) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
while size(vet) > 1:
	for elemento in vet:
		if sum(vet)/size(vet) >= 5:
			ap += 1
		if ap >= 7:
			
	print(ap)
-- ERROR:
File "XXXX", line 10
    print(ap)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:17:20) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
while size(vet) > 1:
	for elemento in vet:
		if sum(vet)/size(vet) >= 5:
			ap += 1
		if ap >= 7:
	print(ap)
	ap = 0
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
File "XXXX", line 9
    print(ap)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:18:17) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
apm = 0
while size(vet) > 1:
	for elemento in vet:
		if sum(vet)/size(vet) >= 5:
			ap += 1
		if ap >= 7:
			apm = apm + ap
	print(ap)
	ap = 0
	apm = 0
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:18:52) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
apm = 0
while size(vet) > 1:
	for elemento in vet:
		if sum(vet)/size(vet) >= 5:
			ap += 1
	print(ap)
	ap = 0
	apm = 0
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:19:33) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
apm = 0
while size(vet) > 1:
	for elemento in vet:
		if ((sum(vet)) / (size(vet))) >= 5:
			ap += 1
	print(ap)
	ap = 0
	apm = 0
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:21:04) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
apm = 0
me = sum(vet) / size(vet)
while size(vet) > 1:
	for elemento in vet:
		if me >= 5:
			ap += 1
	print(ap)
	ap = 0
	apm = 0
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:21:54) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
apm = 0
me = sum(vet) / size(vet)
while size(vet) > 1:
	for elemento in vet:
		s = sum(vet)
	print(s)
	ap = 0
	apm = 0
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:22:32) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
apm = 0
me = sum(vet) / size(vet)
while size(vet) > 1:
	for elemento in vet:
		s = sum(vet) 
		t = size(vet)
	print(s)
	print(t)
	ap = 0
	apm = 0
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:23:33) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
apm = 0
me = sum(vet) / size(vet)
while size(vet) > 1:
	for elemento in vet:
		s = sum(vet) 
		t = size(vet)
		if s / t >= 5:
			ap += 1
	print(ap)		
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:24:01) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
apm = 0
me = sum(vet) / size(vet)
while size(vet) > 1:
	for elemento in vet:
		s = sum(vet) 
		t = size(vet)
		if s / t >= 5:
			ap = ap + 1
	print(ap)		
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:24:15) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
apm = 0
me = sum(vet) / size(vet)
while size(vet) > 1:
	for elemento in vet:
		s = sum(vet) 
		t = size(vet)
		if s / t >= 5:
			ap = ap + 1
	print(ap)		
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:24:59) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
apm = 0
me = sum(vet) / size(vet)
while size(vet) > 1:
	for elemento in vet:
		s = sum(vet) 
		t = size(vet)
		if s / t >= 5:
			ap = ap + 1
	print(ap)		
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:25:35) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
apm = 0
me = sum(vet) / size(vet)
while size(vet) > 1:
	for elemento in vet:
		s = sum(vet) 
		t = size(vet)
		me = s / t
		if me >= 5:
			ap = ap + 1
	print(ap)		
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:26:55) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
s = sum(vet) 
t = size(vet)
me = s / t
while size(vet) > 1:
	for elemento in vet:
		if me >= 5:
			ap = ap + 1
	print(ap)		
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:27:48) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
s = sum(vet) 
t = size(vet)
me = s / t
while size(vet) > 1:
	for elemento in vet:
		if me >= 5:
			ap = ap + 1
	print(ap)		
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:28:59) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
s = sum(vet) 
t = size(vet)
me = s / t
while size(vet) > 1:
	for elemento in vet:
		if me >= 5:
			ap = ap + 1
	print(ap)		
	vet = array(eval(input("Digite mais um vetor: ")))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:37:49) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
s = sum(vet) 
t = size(vet)
me = s / t
while size(vet) > 1:
	for elemento in vet:
		if me >= 5:
			ap = ap + 1
	vet = array(eval(input("Digite mais um vetor: ")))
print(ap)		
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:39:10) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
s = sum(vet) 
t = size(vet)
me = s / t
while size(vet) > 1:
	for elemento in vet:
		if me >= 5:
			ap = ap + 1
	vet = array(eval(input("Digite mais um vetor: ")))
	print(ap)		
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:39:23) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
s = sum(vet) 
t = size(vet)
me = s / t
while size(vet) > 1:
	for elemento in vet:
		if me >= 5:
			ap = ap + 1
	vet = array(eval(input("Digite mais um vetor: ")))
	print(ap)		
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:40:43) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
s = sum(vet) 
t = size(vet)
me = s / t
while size(vet) > 1:
	for elemento in vet:
		if me >= 5:
			ap = ap + 1
	print(ap)
	
	vet = array(eval(input("Digite mais um vetor: ")))
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:41:11) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0
s = sum(vet) 
t = size(vet)
me = s / t
while size(vet) > 1:
	for elemento in vet:
		if me >= 5:
			ap = ap + 1
	print(ap)
	ap = 0
	vet = array(eval(input("Digite mais um vetor: ")))
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 00:17:57) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0

while size(vet) > 1:
	for i in vet:
		if vet[i]>= 5 and vet[i] < 7:
			ap = ap + 1
	print(ap)
	ap = 0
	vet = array(eval(input("Digite mais um vetor: ")))
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 00:20:19) 
-- CODE:
from numpy import*
vet = array(eval(input("Digite o vetor: ")))
ap = 0

while size(vet) > 1:
	for i in vet:
		if vet[i]>= 5 and vet[i] < 7:
			ap = ap + 1
		print(ap)
	ap = 0
	vet = array(eval(input("Digite mais um vetor: ")))
	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 00:25:50) 
-- CODE:
from numpy import*
v = array(eval(input("Digite as medias: ")))
ap = 0
while size(v) > 1:
	for i in v:
		if v[i] >= 5 and v[i] < 7:
			ap += 1
	print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 00:26:25) 
-- CODE:
from numpy import*
v = array(eval(input("Digite as medias: ")))
ap = 0
while size(v) > 1:
	for i in v:
		if v(i) >= 5 and v(i) < 7:
			ap += 1
	print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 00:26:35) 
-- CODE:
from numpy import*
v = array(eval(input("Digite as medias: ")))
ap = 0
while size(v) > 1:
	for i in v:
		if v(i) >= 5 and v(i) < 7:
			ap += 1
	print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 00:28:29) 
-- CODE:
from numpy import*
v = array(eval(input("Digite as medias: ")))
ap = 0
while size(v) > 1:
	for i in v:
		if vet[i] >= 5:
			ap += 1
	print(ap)
	ap = 0 
	v = array(eval(input("Digite as medias: ")))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 00:28:43) 
-- CODE:
from numpy import*
v = array(eval(input("Digite as medias: ")))
ap = 0
while size(v) > 1:
	for i in v:
		if v[i] >= 5:
			ap += 1
	print(ap)
	ap = 0 
	v = array(eval(input("Digite as medias: ")))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 00:29:23) 
-- CODE:
from numpy import*
v = array(eval(input("Digite as medias: ")))
ap = 0
while size(v) > 1:
	for i in v:
		if i >= 5 and i < 7:
			ap += 1
	print(ap)
	ap = 0 
	v = array(eval(input("Digite as medias: ")))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 00:29:43) 
-- CODE:
from numpy import*
v = array(eval(input("Digite as medias: ")))
ap = 0
while size(v) > 1:
	for i in v:
		if i >= 5 and i < 7:
			ap += 1
	print(ap)
	ap = 0 
	v = array(eval(input("Digite as medias: ")))	
-- EXECUTION TIME:
1.06636
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
